# mortgage

./: .gitignore  CMakeLists.txt  README
boot/src/: main.c
bootloader/src/: main.c
cli/: menu.c  menu.h  menu_header
cli/menu/: menu.c  menu.h
core/address/: address.h
core/client/: client.c  client.h
core/constants/: constants.h
core/credit/: credit.c  credit.h
core/good/: good.h
core/lib/client/: client.c  client.h
infra/: dbclient.csv
infra/db/: client.csv  credit.csv
infra/io/amortization_table/: 1_chrys_ngoma_amortization_table.txt
infra/io/crud/: client_crud.c  client_crud.h  credit_crud.c  credit_crud.h
infra/io/parser.csv/: csv.c  csv.h
utils/: file_utils.h  stringUtils.c  stringUtils.h
utils/file/: file_utils.c
utils/strings/: stringUtils.c  stringUtils.h
utils/time/: time_utils.c  time_utils.h
